@@ -6,7 +6,7 @@
 
 use Test;
 use Devel::Peek;
-BEGIN { plan tests => 56 };
+BEGIN { plan tests => 57 };
 use Search::Xapian qw(:standard);
 ok(1); # If we made it this far, we're ok.
 
@@ -29,7 +29,8 @@ $qp->set_stemming_strategy( STEM_ALL );
 $qp->set_default_op( OP_AND );
 
 my $query;
-ok( $query = $qp->parse_query( 'one or two', FLAG_BOOLEAN|FLAG_BOOLEAN_ANY_CASE ) );
+ok( $query = $qp->parse_query( 'one or two', FLAG_BOOLEAN|FLAG_BOOLEAN_ANY_CASE|FLAG_SPELLING_CORRECTION ) );
+ok( not $qp->get_corrected_query_string());
 ok( $query->get_description(), "Xapian::Query((one:(pos=1) OR two:(pos=2)))" );
 
 ok( $query = $qp->parse_query( 'one OR (two AND three)' ) );
